--- a/backend/.env.railway
+++ b/backend/.env.railway
@@ -9,11 +9,11 @@ DEBUG=False
 
 # MongoDB Atlas
 # Format : mongodb+srv://<user>:<password>@<cluster>.mongodb.net/<dbname>?retryWrites=true&w=majority
-MONGO_URL=mongodb+srv://TON_USER:TON_PASSWORD@cluster0.xxxxx.mongodb.net/pickupoint?retryWrites=true&w=majority
-DB_NAME=pickupoint
+MONGO_URL=mongodb+srv://USER:PASSWORD@cluster.mongodb.net/DB_NAME?retryWrites=true&w=majority
+DB_NAME=Pickupoint
 
 # JWT — générer avec : python -c "import secrets; print(secrets.token_hex(32))"
-JWT_SECRET=REMPLACER_PAR_UNE_CLE_SECRETE_64_CHARS_MIN
+JWT_SECRET=REPLACE_WITH_STRONG_SECRET_KEY
 ACCESS_TOKEN_EXPIRE_MINUTES=120
 REFRESH_TOKEN_EXPIRE_DAYS=30
 
@@ -22,17 +22,17 @@ OTP_EXPIRE_MINUTES=10
 OTP_LENGTH=6
 
 # Twilio (SMS/WhatsApp OTP)
-TWILIO_ACCOUNT_SID=ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-TWILIO_AUTH_TOKEN=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-TWILIO_SMS_NUMBER=+1xxxxxxxxxx
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_SMS_NUMBER=
 TWILIO_WHATSAPP_NUMBER=whatsapp:+14155238886
 
-# Flutterwave (paiements)
-FLUTTERWAVE_SECRET_KEY=FLWSECK_TEST-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx-X
-FLUTTERWAVE_PUBLIC_KEY=FLWPUBK_TEST-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx-X
-FLUTTERWAVE_WEBHOOK_SECRET=xxxxxxxxxxxxxxxx
+# Paiement — Flutterwave
+FLUTTERWAVE_SECRET_KEY=
+FLUTTERWAVE_PUBLIC_KEY=
+FLUTTERWAVE_WEBHOOK_SECRET=
 
-# Pricing (XOF) — optionnel, valeurs par défaut dans config.py
+# Pricing (XOF)
 BASE_PRICE_RELAY=500.0
 BASE_PRICE_HOME=1000.0
 PRICE_PER_KM=50.0
