Fix Railway build context: set context to backend folder

--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,7 @@
 [build]
 # Railway détecte le Dockerfile automatiquement
-dockerfilePath = "backend/Dockerfile"
+context = "backend"
+dockerfilePath = "Dockerfile"
 watchPatterns = ["backend/**"]
 
 [deploy]
