Fix Railway deployment: move Dockerfile to root and update railway.toml

--- a/railway.toml
+++ b/railway.toml
@@ -1,8 +1,5 @@
 [build]
-# Railway détecte le Dockerfile automatiquement
-context = "backend"
-dockerfilePath = "Dockerfile"
-watchPatterns = ["backend/**"]
+watchPatterns = ["backend/**", "Dockerfile"]
 
 [deploy]
 startCommand = "sh -c 'uvicorn main:app --host 0.0.0.0 --port ${PORT:-8001}'"
