Phase 4: Relay Profile, Navigation fixes, and Simulation scripts

--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
 
   # Icônes
   flutter_svg: ^2.0.0
+  flutter_map: ^8.2.2
+  latlong2: ^0.9.1
 
 dev_dependencies:
   flutter_test:
