update: simulate_scenario.py improvements

--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_svg: ^2.0.0
   flutter_map: ^8.2.2
   latlong2: ^0.9.1
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
