security: remove hardcoded api keys and use environment injection

--- a/mobile/android/app/src/main/AndroidManifest.xml
+++ b/mobile/android/app/src/main/AndroidManifest.xml
@@ -34,9 +34,9 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-        <!-- Google Maps API Key -->
+        <!-- Google Maps API Key (Injected via local.properties or environment) -->
         <meta-data android:name="com.google.android.geo.API_KEY"
-                   android:value="AIzaSyD-XtnKEJmHGdOG7yRTBQh8I5RrRWkrG1U"/>
+                   android:value="${googleMapsApiKey}"/>
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
